// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingView matches snapshot correctly 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="white-space: normal; position: relative; pointer-events: unset;"
  >
    <h1
      class="mc-c-fHQyyx mc-c-fHQyyx-cOVgnz-level-1"
      data-placeholder="placeholder.heading1"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 2 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="white-space: normal; position: relative; pointer-events: unset;"
  >
    <h2
      class="mc-c-fHQyyx mc-c-fHQyyx-gPLAez-level-2"
      data-placeholder="placeholder.heading2"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 3 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="white-space: normal; position: relative; pointer-events: unset;"
  >
    <h3
      class="mc-c-fHQyyx mc-c-fHQyyx-llzMLw-level-3"
      data-placeholder="placeholder.heading3"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 4 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="white-space: normal; position: relative; pointer-events: unset;"
  >
    <h4
      class="mc-c-fHQyyx mc-c-fHQyyx-dWBeGD-level-4"
      data-placeholder="placeholder.heading4"
    />
  </div>
</div>
`;

exports[`HeadingView renders correspond heading according to level level 5 1`] = `
<div>
  <div
    data-node-view-wrapper=""
    style="white-space: normal; position: relative; pointer-events: unset;"
  >
    <h5
      class="mc-c-fHQyyx mc-c-fHQyyx-hCSGfy-level-5"
      data-placeholder="placeholder.heading5"
    />
  </div>
</div>
`;
